// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DownloadOptions/> Renders an empty container when fileUrls is an empty array 1`] = `
<div
  id="download-options-container"
>
  <style>
    
            div {
                display: flex;
                justify-content: flex-end;
            }
        
  </style>
</div>
`;

exports[`<DownloadOptions/> Renders an empty container when fileUrls is an empty array 2`] = `
<div
  id="download-options-container"
>
  <DownloadOption
    file={
      Object {
        "extension": "pdf",
        "url": "http://www.google.nl",
      }
    }
    key="0"
  />
  <DownloadOption
    file={
      Object {
        "extension": "xls",
        "url": "http://www.google.com",
      }
    }
    key="1"
  />
  <style>
    
            div {
                display: flex;
                justify-content: flex-end;
            }
        
  </style>
</div>
`;
